@@ -86,6 +86,7 @@ Useful commands
 - npm run weftend -- adapter doctor --text
 - npm run weftend -- adapter doctor --write-policy policies/adapter_maintenance.json
 - npm run weftend -- adapter doctor --write-policy policies/adapter_maintenance.json --include-missing-plugins
+- Note: `--include-missing-plugins` requires `--write-policy`.
 - npm run weftend -- safe-run <input> --out <dir> --adapter auto|none|archive|package|extension|iac|cicd|document|container|image|scm|signature
 - npm run weftend -- safe-run <input> --out <dir> --adapter archive --enable-plugin tar
 
