@@ -36,6 +36,7 @@ See docs/WHAT_IS_WEFTEND.md and docs/WHY_RECEIPTS.md for details.
   npm run weftend -- adapter doctor --text
   npm run weftend -- adapter doctor --write-policy policies/adapter_maintenance.json
   npm run weftend -- adapter doctor --write-policy policies/adapter_maintenance.json --include-missing-plugins
+  Note: `--include-missing-plugins` is valid only with `--write-policy`.
 - Run safe-run with adapter auto-detect:
   npm run weftend -- safe-run <input> --out <dir> --adapter auto
 - Force a specific adapter:
